# mcp

./: .editorconfig  .envrc  .gitignore  .mcp.json  README.md  Taskfile.dist.yaml  mise.toml
.claude/: settings.json
.claude/commands/: standup.md  suggest-tools.md
.github/workflows/: publish-mise.yaml  python.yaml
.taskfiles/: python.yaml  server.yaml  setup.yaml
mise/: Dockerfile  README.md  pyproject.toml
mise/src/mcp_server_mise/: __init__.py  __main__.py  commands.py  handlers.py  server.py  tools.py
mise/tests/: __init__.py  test_mise_server.py
standup/: .gitignore  README.md  example_usage.md  github-activity.sh  pyproject.toml  run_tests.py
standup/src/mcp_server_standup/: __main__.py  github.py  server.py
standup/src/standup_server/: __init__.py  formatting.py  github.py  server.py  utils.py
standup/tests/: __init__.py  conftest.py  test_formatting.py  test_github.py  test_server.py  test_utils.py
