[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-mise"
version = "0.0.1"
description = "MCP server for managing dependencies with mise"
authors = [
  { name = "Brett", email = "20871604+brettinternet@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["mcp>=1.0.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "ruff>=0.1.0"]

[project.scripts]
mcp-server-mise = "mcp_server_mise.__main__:cli_main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mcp_server_mise*"]

[tool.ruff]
line-length = 100
target-version = "py38"
